--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ favicon: favicon.png
 repository: liaozhigit/liaozhigit.github.io
 github_url: https://github.com/liaozhigit
 cnblog_url: http://www.cnblogs.com/ityouknow
-url: https://liaozhigit.github.io
+url: http://www.xinting.xin/
 enforce_ssl: ityouknow.com
 
 ## Gem
