--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ favicon: favicon.png
 repository: liaozhigit/liaozhigit.github.io
 github_url: https://github.com/liaozhigit
 cnblog_url: http://www.cnblogs.com/liaozhigit
-url: http://liaozhi.xinting.xin/
+url: http://www.xinting.xin/
 enforce_ssl: liaozhigit.com
 
 ## Gem
